src/styles/indexAcc.css
/* Global */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');

:root {
    --green: #8CE149;
    font-family: 'Roboto', sans-serif;
}

body {
    margin: 0%;
    padding: 0%;
}

/* Top container */
.top-container {
    height: 10vh;
    background: var(--green);

    display: flex;
    align-items: center;
    justify-content: center;
}

.top-title {
    width: 100%;
    text-align: center;

    font-style: normal;
    font-weight: 400;
    font-size: 32px;

    color: #FFFFFF;
}

/* Middle container */
.middle-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    height: 75vh;
}

/* Middle container left sidebar & left sidebar buttons */
.middle-container-left-side {
    width: 10%;
    height: 80%;
    display: flex;
    flex-direction: column;

    align-items: center;
    justify-content: center;

    padding: 10px;
    padding-right: 30px;
    margin-bottom: 50px;
    margin-top: 50px;
    margin-right: 10px;
    margin-left: 30px;
    border-right: 1px solid black;
}

.left-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.left-side-button {
    margin: 15px;
    width: 120px;
    height: 120px;

    display: flex;
    flex-direction: column;

    border-radius: 10%;

    text-align: center;
    padding: auto;
}

.left-img {
    display: block;
    max-width: 65%;
    max-height: 65%;
    width: auto;
    border-radius: 50%;
    align-self: center;
}

.left-desc {
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
}

.left-checkbox {
    height: 20%;
}

/* Middle container right side */
.middle-container-right-side {
    width: 90%;
    height: 95%;

    margin-bottom: 30px;
    margin-top: 30px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* The navigation bar container */
.nav-container {
    width: 80%;
    height: 15%;
    margin: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

/* The searchbar (dropdown menu / filter / sort) container */
.searchbar-container {
    width: 100%;

    display: flex;
    flex-direction: row;
    justify-content: center;
}

.searchbar {
    width: 100%;
    height: 40px;

    border: 3px solid black;
    border-radius: 30px;
    padding-left: 1rem;

    font-style: normal;
    font-size: 20px;
}

/* The right side buttons (account, settings...) */
.right-buttons {
    margin: 10px;
    width: 20%;
    height: 70px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.right-sidebar-button {
    margin: 10px;
    width: 60px;
    height: 100%;

    display: flex;

    border-radius: 50%;

    justify-content: center;
    align-items: center;
}

.right-img {
    width: 40px;
    height: 40px;
    width: auto;
    border-radius: 50%;
}

/* The main content container (google maps, list, etc.) */
.main-content-container {
    width: 80%;
    height: 75%;

    margin-bottom: 50px;

    border: 2px solid black;

    border-radius: 20px;
}

/* Bottom container */
.bottom-container {
    height: 15vh;
    background-color: var(--green, #0f0);

    position: fixed;
    left: 0;
    bottom: 0;
    width: 100vw;
    text-align: center;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

/* The container for the buttons at the footer */
.bottom-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    width: 80%;
}


.right-side-button {
    margin: 15px;
    width: 80px;
    height: 80px;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    text-align: center;
    padding: auto;
    background: white;
    border-radius: 50%;
}

.bot-img {
    margin: 15px;
    width: 60px;
    height: 60px;

    display: block;
    max-width: 70%;
    max-height: 70%;
    width: auto;
    align-self: center;
}

/* paiseh nigel */
/* .map {
    left: 12.5%;
}

.network {
    right: 12.5%
}

.search {
    margin: 0 auto;
} */

